--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,3 +11,4 @@ transformers:
     - 'package:angular2/common.dart#COMMON_DIRECTIVES'
     platform_pipes:
     - 'package:angular2/common.dart#COMMON_PIPES'
+    entry_points: web/main.dart
